Updates carousel to prevent overflow

--- a/themes/cadre/css/cadre.css
+++ b/themes/cadre/css/cadre.css
@@ -174,3 +174,9 @@ section.blue h3 {
 {
     display: inline;
 }
+
+#fellow_carousel
+{
+    overflow: hidden;
+    position: relative;
+}
